updated index.xml file

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
    
    <figure>
     <img src="images_src/About_me.jpg" srcset="images_src/About_me.jpg 1x , images/About_me-600_2x.jpg 2x" alt="About me image" />
-    <figcaption> About Myself
+    <figcaption> "About Me" by "late night post quotes" (http://www.google.com/images)
     </figcaption>
    </figure>
    
@@ -74,7 +74,7 @@
    
    <figure>
     <img src="images_src/Education.jpg" srcset="images_src/Education.jpg 1x , images/Education-600_2x.jpg 2x" alt="Education description image" />
-    <figcaption>Education
+    <figcaption>"Lifelong learning clip art"  (https://wearefram.com/education-system-impacts-on-technical-skills-vietnam-digital-talents/)"
     </figcaption>
    </figure>
    
@@ -92,7 +92,8 @@
 
    <figure>
     <img src="images_src/Technical_skills_new.jpg" srcset="images_src/Technical_skills_new.jpg 1x , images/Technical_skills_new-600_2x.jpg 2x" alt="Technical skills description image" />
-    <figcaption>Technical skills
+    <figcaption>"Technical skills image from 
+     (https://wearefram.com/education-system-impacts-on-technical-skills-vietnam-digital-talents/)"
     </figcaption>
    </figure>
 
@@ -106,7 +107,7 @@
 
    <figure>
     <img src="images_src/maxresdefault.jpg" srcset="images_src/maxresdefault.jpg 1x , images/maxresdefault-600_2x.jpg 2x" alt="Specialities description image" />
-    <figcaption>Specialities
+    <figcaption>"specialities image" from "https://www.emmasaying.com"
     </figcaption>
    </figure>
 
